k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tops-frontend
  labels:
    app: tops-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tops-frontend
  template:
    metadata:
      labels:
        app: tops-frontend
    spec:
      containers:
        - name: frontend
          image: gremienpilot-frontend:kolibri
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
