k8s/frontend/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tops-frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2050m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: tops.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tops-frontend
                port:
                  number: 80
